--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "@playwright/test": "^1.50.0",
     "@types/node": "^22.10.10"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.4.0"
   }
 }
